# case-adversarial-engine

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  config.yaml  pyproject.toml  requirements.txt
.bulwark/policies/: repo_policy.yaml  risk.yaml
.bulwark/tasks/: 001_v0_5_repo_layout_bootstrap.yaml  002_v0_5_case_workspace_contract.yaml  003_v0_5_job_manager_contract.yaml  004_v0_5_schema_refinement.yaml  005_v0_5_benchmark_contract.yaml  006_v0_5_evidence_index_contract.yaml  007_v0_5_issue_extractor_contract.yaml  008_v0_5_report_engine_contract.yaml  101_v1_interactive_followup_contract.yaml  102_v1_scenario_engine_contract.yaml
.claude/: settings.local.json
.github/workflows/: benchmark.yml  ci.yml
api/: README.md  app.py  auth.py  case_index.py  export_service.py  permissions.py  review_service.py  schemas.py  service.py  users.py
api/static/: index.html
api/tests/: conftest.py  test_analysis_endpoints.py  test_auth.py  test_auth_jwt.py  test_case_index.py  test_case_scenario_endpoints.py  test_case_store_persistence.py  test_e2e_api_flow.py  test_e2e_lifecycle.py  test_end_to_end_flow.py  test_export_endpoints.py  test_review_endpoints.py  test_runtime_regressions.py  test_scenario_endpoints.py  test_unit15_endpoints.py
benchmarks/: README.md
benchmarks/acceptance/: README.md  v0_5_pass_criteria.json
benchmarks/civil_loans/: README.md  case_manifest.schema.json  gold_dataset_selection_report.md
benchmarks/fixtures/: README.md  case_workspace_run_replay.json  civil_loan_full_objects.json  evidence_indexer_input.json  evidence_indexer_output.json  interaction_turn_example.json  issue_extractor_input.json  issue_extractor_output.json  procedure_states_example.json  report_artifact_example.json  scenario_diff_example.json
cases/: labor_dispute_1.yaml  labor_dispute_2.yaml  labor_dispute_3.yaml  real_estate_1.yaml  real_estate_2.yaml  real_estate_3.yaml  wang_v_chen_zhuang_2025.yaml  wang_zhang_2022.yaml
config/: engine_config.yaml  model_tiers.yaml
data/: court_cases_index.json
docs/: 00_north_star.md  01_product_roadmap.md  02_architecture.md  03_case_object_model.md  04_eval_and_acceptance.md  05_contract_alignment_update.md  05_repository_map.md  05_v1.5_spec.md  06_v1.2_spec.md  README.md
docs/archive/: README.md
docs/plans/: 2026-03-30-001-feat-v2-full-roadmap-plan.md  2026-03-31-001-fix-cleanup-and-api-alignment-plan.md  2026-03-31-ce-brainstorm-phase4-5-assessment.md  2026-03-31-ce-brainstorm-v2-alignment.md  2026-03-31-v2-implementation-plan.md  2026-04-01-v3-4layer-architecture.md  2026-04-01-v3-improvements.md  2026-04-07-layer-4-HANDOFF.md  2026-04-07-layer-4-criminal-admin-plan.md  2026-04-07-layer-4-criminal-admin-plan.review.md  2026-04-07-layer-4-spike-6.1.0-report.md
docs/reviews/: 2026-04-01-codex-v3-review-round2.md  2026-04-01-codex-v3-review.md
engines/: README.md  conftest.py
engines/adversarial/: __init__.py  round_engine.py  schemas.py  summarizer.py
engines/case_extraction/: __init__.py  extractor.py  schemas.py
engines/case_structuring/: README.md  amount_calculator_contract.md  evidence_indexer_contract.md  issue_extractor_contract.md
engines/document_assistance/: __init__.py  engine.py  schemas.py
engines/interactive_followup/: README.md  __init__.py  interaction_contract.md  responder.py  schemas.py  session_manager.py  validator.py
engines/pretrial_conference/: conference_engine.py  cross_examination_engine.py  minutes_generator.py  pretrial_followup.py  schemas.py
engines/procedure_setup/: README.md  __init__.py  planner.py  schemas.py  validator.py
engines/report_generation/: README.md  __init__.py  docx_generator.py  evidence_battle_matrix.py  generator.py  issue_evidence_defense_matrix.py  mediation_range.py  outcome_paths.py  perspective_summary.py  report_engine_contract.md  risk_heatmap.py  schemas.py  validator.py
engines/shared/: __init__.py  access_control.py  case_type_plugin.py  checkpoint.py  cli_adapter.py  config_loader.py  consistency_checker.py  disclaimer_templates.py  display_resolver.py  event_log.py  evidence_state_machine.py  job_manager.py  json_utils.py  llm_utils.py  logging_config.py  model_selector.py  models.py  pii_redactor.py  progress_reporter.py  rule_config.py  structured_output.py  workspace_manager.py
engines/similar_case_search/: __init__.py  keyword_extractor.py  local_search.py  relevance_ranker.py  schemas.py
engines/simulation_run/: README.md  __init__.py  scenario_engine_contract.md  schemas.py  simulator.py  validator.py
graphify-out/: GRAPH_REPORT.md
graphify-out/converted/: 对抗分析报告_016a35cf.md  对抗分析报告_04b7e060.md  对抗分析报告_0b269a80.md  对抗分析报告_13c6f706.md  对抗分析报告_20aa1abd.md  对抗分析报告_2b5c9ec2.md  对抗分析报告_35a0423e.md  对抗分析报告_39d92f73.md  对抗分析报告_3d1c69ae.md  对抗分析报告_3fb20070.md  对抗分析报告_4c794052.md  对抗分析报告_511f79c5.md  对抗分析报告_545045d1.md  对抗分析报告_5a82e9c6.md  对抗分析报告_5fb5f8ee.md  对抗分析报告_651e807d.md  对抗分析报告_721a0305.md  对抗分析报告_78b8f6f6.md  对抗分析报告_7cb18d97.md  对抗分析报告_813f2284.md  对抗分析报告_84efa03b.md  对抗分析报告_8ce998d6.md  对抗分析报告_9026a146.md  对抗分析报告_9cd7a8e6.md  对抗分析报告_a7356248.md  对抗分析报告_b7726919.md  对抗分析报告_b986ce19.md  对抗分析报告_bbe946df.md  对抗分析报告_c41c6ab4.md  对抗分析报告_c92966ad.md  (+33 more)
plans/: current_plan.md  v1_completion_report.md  v1_gap_analysis.md  v2-closing-plan.md  v2.5-plan.md  v3-plan.md
reviews/: architecture-review-2025-04-02.md  contract-aware-audit-2026-04-03.md  repo-aware-audit-2026-04-04.md
scenarios/: example_modify_issue.yaml  example_remove_evidence.yaml
schemas/: README.md  indexing.schema.json
scripts/: _gen_v3_docx.py  eval_benchmark.py  extract_case.py  extract_case_yaml.py  insert_similar_cases.py  quick_eval_compare.py  regen_docx.py  run_acceptance.py  run_case.py  run_real_case.py  run_scenario.py  run_similar_case_search.py  run_similar_cases.py  run_wang_v_chen_zhuang.py  scrape_court_cases.py  test_codex_cli.py  verify_v05.py
tests/: README.md  test_defense_chain_optimizer.py  test_executive_summarizer_structured.py  test_few_shot_examples.py  test_hearing_order_generator.py  test_issue_dependency_graph.py
(+8007 files in other folders)
