[project]
name = "case-adversarial-engine"
version = "1.0.0"
description = "Case Adversarial Engine — 对抗式案件分析引擎"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.39.0",
    "pydantic>=2.0",
    "jsonschema>=4.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = [
    "engines/shared/tests",
    "engines/case_structuring/evidence_indexer/tests",
    "engines/case_structuring/issue_extractor/tests",
    "engines/case_structuring/amount_calculator/tests",
    "engines/interactive_followup/tests",
    "engines/report_generation/tests",
    "engines/simulation_run/tests",
    "engines/procedure_setup/tests",
    "engines/adversarial/tests",
    "engines/simulation_run/issue_impact_ranker/tests",
    "engines/simulation_run/decision_path_tree/tests",
    "engines/simulation_run/attack_chain_optimizer/tests",
    "tests/integration",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"