[project]
name = "case-adversarial-engine"
version = "1.5.0"
description = "Case Adversarial Engine — 对抗式案件分析引擎"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.39.0",
    "pydantic>=2.0",
    "jsonschema>=4.20.0",
    "pyyaml>=6.0",
    "python-docx>=1.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0",
    "ruff>=0.4.0",
]
api = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "python-multipart>=0.0.9",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = [
    "engines/shared/tests",
    "engines/case_structuring/evidence_indexer/tests",
    "engines/case_structuring/issue_extractor/tests",
    "engines/case_structuring/amount_calculator/tests",
    "engines/case_structuring/evidence_weight_scorer/tests",
    "engines/case_structuring/admissibility_evaluator/tests",
    "engines/interactive_followup/tests",
    "engines/report_generation/tests",
    "engines/simulation_run/tests",
    "engines/procedure_setup/tests",
    "engines/adversarial/tests",
    "engines/simulation_run/issue_impact_ranker/tests",
    "engines/simulation_run/decision_path_tree/tests",
    "engines/simulation_run/attack_chain_optimizer/tests",
    "engines/simulation_run/issue_category_classifier/tests",
    "engines/simulation_run/evidence_gap_roi_ranker/tests",
    "engines/simulation_run/action_recommender/tests",
    "engines/simulation_run/credibility_scorer/tests",
    "engines/simulation_run/alternative_claim_generator/tests",
    "engines/report_generation/executive_summarizer/tests",
    "engines/pretrial_conference/tests",
    "engines/simulation_run/defense_chain/tests",
    "engines/simulation_run/hearing_order/tests",
    "engines/simulation_run/issue_dependency_graph/tests",
    "tests/integration",
]

[tool.coverage.run]
source = ["engines"]
omit = ["*/tests/*", "*/conftest*"]

[tool.coverage.report]
fail_under = 70
show_missing = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = [
    "E402",  # module-import-not-at-top: common pattern (sys.path setup in test helpers)
    "E501",  # line-too-long: long lines are prevalent; enforce formatting separately
    "F401",  # unused-import: to be cleaned up incrementally
    "F541",  # f-string-without-placeholders: cosmetic, clean up incrementally
    "F841",  # unused-variable: cosmetic, clean up incrementally
]

[tool.ruff.lint.per-file-ignores]
"**/tests/**" = ["F821"]  # forward-ref string annotations in test helper methods

[tool.setuptools.packages.find]
include = ["engines*"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"